force-app/main/default/objects/Loan_Charge__c/Loan_Charge__c.object-meta.xml
<CustomObject>
    <label>Loan Charge</label>
    <nameField>
        <label>Loan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>