force-app/main/default/objects/Loan_Charge__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin Fee</fullName>
            </value>
            <value>
                <fullName>Interest Charge</fullName>
            </value>
            <value>
                <fullName>Legal Fee</fullName>
            </value>
            <value>
                <fullName>Release Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>