force-app/main/default/objects/Loan_Charge__c/recordTypes/Default_Loan_Charge_Layout.recordType-meta.xml
<RecordType>
    <fullName>Default_Loan_Charge_Layout</fullName>
    <active>true</active>
    <label>Default Loan Charge Layout</label>
</RecordType>