force-app/main/default/objects/Loan_Charge__c/recordTypes/Default_Loan_Charge_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Loan_Charge_Record_Type</fullName>
    <active>true</active>
    <label>Default Loan Charge Record Type</label>
</RecordType>